tdf#153602 writerfilter: clear isDummyPara after processing table.

Once the table is processed, the fact that we had a dummy paragraph
is no longer relevant to the section. So, after carefully figuring
out that we have had some other paragraph in the main text body,
clear the dummy status used to control bRemove.

This fixes the problem of adding an empty paragraph each round-trip.

Unfortunately, this would still fail if for example there was only
another table following the first one. Well, it wouldn't fail that
badly because the first save would add an empty paragraph,
and then following saves would use that single empty paragraph
as the one that resets things. So we always have at least one CR
following a table, but at least they aren't multiplying.

Unfortunately this isn't at all clean, because as soon as
the table starts, we no longer know that it is the first
paragraph in the section. (The other table paragraphs
and potentially header, comment, footnote, shape etc
can all set IsFirstParagraphInSection to off.
Basically, most flags are completely useless since
they are not stacked in any way. So we are left with
a multitude of conditions to check for everything.

Change-Id: Ic6a9795a6c529f8b5dd4f5d1cccc89db01b03d28
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146955
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>