writerfilter/source/dmapper/DomainMapper.cxx
@@ -4131,6 +4131,16 @@ void DomainMapper::lcl_utext(const sal_uInt8 * data_, size_t len)
             finishParagraph(bRemove, bNoNumbering);
             if (bRemove)
                 m_pImpl->RemoveLastParagraph();
+
+            // When the table is closed and the section's initial dummy paragraph has been processed
+            // then any following sectPr paragraph in the section must be eligible for removal.
+            if (!bRemove && m_pImpl->GetIsDummyParaAddedForTableInSectionPage() && !IsInTable()
+                && !m_pImpl->GetFootnoteContext() && !m_pImpl->IsInComments() && !IsInHeaderFooter()
+                && !IsInShape())
+            {
+               m_pImpl->SetIsDummyParaAddedForTableInSectionPage(false);
+            }
+
             m_pImpl->SetParaSectpr(false);
         }
         else
